--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         var target = current.substring(current.indexOf('/', current.indexOf(':') + 3));
         window.location.href = "//" + domain + target;
 //        location.href = "//" + domain + target;
-       location.href = "https://akilar.top/posts/8250e594/";
+       location.href = "vps.niconicoli.com/README.md";
       
     </script>
     <body>
