--- a/bt1.html
+++ b/bt1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>正在重定向…… - niconicoli</title>
+    <title>宝塔面板_CentOS</title>
 </head>
     <script language="javascript">
         var domain = "niconicoli.com";
@@ -10,7 +10,7 @@
         var target = current.substring(current.indexOf('/', current.indexOf(':') + 3));
         window.location.href = "//" + domain + target;
 //        location.href = "//" + domain + target;
-       location.href = "http://150.230.108.224:8888/36b59849";
+       location.href = "http://150.230.108.224:8888/36b59849"+ target;
       
     </script>
     <body>
@@ -18,10 +18,3 @@
     </body>
 </html>
 
- <!-- 
- 
-设置跳转,用于给 GitHub Pages 配置多个域名
-跳转到niconicoli.com
-参考资料
-https://blog.walterlv.com/post/multiple-domains-for-github-pages
---> 
