--- a/bt1.html
+++ b/bt1.html
@@ -10,11 +10,11 @@
         var target = current.substring(current.indexOf('/', current.indexOf(':') + 3));
         window.location.href = "//" + domain + target;
 //        location.href = "//" + domain + target;
-       location.href = "http://150.230.108.224:8888/36b59849"+ target;
+       location.href = "http://150.230.108.224:8888/36b59849";
       
     </script>
     <body>
-        正在重定向……
+        重定向_宝塔面板_CentOS
     </body>
 </html>
 
