--- a/index.html
+++ b/index.html
@@ -1,3 +1,57 @@
 <h1><a id="domain-vps" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>domain-vps</h1>
 <p>二级域名-vps用</p>
 <p>基于重定向,仅为了方便记忆网站;若想实际为vps添加域名,可以使用宝塔面板</p>
+<h2><a id="centos" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>CentOS</h2>
+<table>
+<thead>
+<tr>
+<th>网站</th>
+<th>URL</th>
+<th>重定向</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>宝塔面板</td>
+<td>vps.niconicoli.com/bt</td>
+<td><a href="http://150.230.108.224:8888/36b59849">http://150.230.108.224:8888/36b59849</a></td>
+</tr>
+<tr>
+<td>zfile</td>
+<td>vps.niconicoli.com/zfile</td>
+<td><a href="http://150.230.108.224:8080/2/main/root">http://150.230.108.224:8080/2/main/root</a></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<h2><a id="ubuntu" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>Ubuntu</h2>
+<table>
+<thead>
+<tr>
+<th>网站</th>
+<th>URL</th>
+<th>重定向</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>宝塔面板</td>
+<td>vps.niconicoli.com/bt2</td>
+<td><a href="http://150.230.192.222:8888/68f0041d">http://150.230.192.222:8888/68f0041d</a></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
