--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <tbody>
 <tr>
 <td>宝塔面板</td>
-<td>vps.niconicoli.com/bt</td>
+<td><a href="https://vps.niconicoli.com/bt">https://vps.niconicoli.com/bt</a></td>
 <td><a href="http://150.230.108.224:8888/36b59849">http://150.230.108.224:8888/36b59849</a></td>
 </tr>
 <tr>
 <td>zfile</td>
-<td>vps.niconicoli.com/zfile</td>
+<td><a href="https://vps.niconicoli.com/zfile">https://vps.niconicoli.com/zfile</a></td>
 <td><a href="http://150.230.108.224:8080/2/main/root">http://150.230.108.224:8080/2/main/root</a></td>
 </tr>
 <tr>
@@ -40,7 +40,7 @@
 <tbody>
 <tr>
 <td>宝塔面板</td>
-<td>vps.niconicoli.com/bt2</td>
+<td><a href="https://vps.niconicoli.com/bt2">https://vps.niconicoli.com/bt2</a></td>
 <td><a href="http://150.230.192.222:8888/68f0041d">http://150.230.192.222:8888/68f0041d</a></td>
 </tr>
 <tr>
