--- a/index.html
+++ b/index.html
@@ -1,6 +1,62 @@
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <h1><a id="domain-vps" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>domain-vps</h1>
 <p>二级域名-vps用</p>
 <p>基于重定向,仅为了方便记忆网站;若想实际为vps添加域名,可以使用宝塔面板</p>
+<h1><a id="vps1" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>vps1</h1>
+<table>
+<thead>
+<tr>
+<th>网站</th>
+<th>URL</th>
+<th>IP</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>宝塔面板</td>
+<td><a href="http://vps1.niconicoli.com:8888/36b59849/">http://vps1.niconicoli.com:8888/36b59849/</a></td>
+<td><a href="http://150.230.108.224:8888/36b59849">http://150.230.108.224:8888/36b59849</a></td>
+</tr>
+<tr>
+<td>zfile</td>
+<td><a href="http://vps1.niconicoli.com:8080/2/main">http://vps1.niconicoli.com:8080/2/main</a></td>
+<td><a href="http://150.230.108.224:8080/2/main/root">http://150.230.108.224:8080/2/main/root</a></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<h1><a id="vps2" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>vps2</h1>
+<table>
+<thead>
+<tr>
+<th>网站</th>
+<th>URL</th>
+<th>重定向</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>宝塔面板</td>
+<td><a href="http://vps2.niconicoli.com:8888/68f0041d">http://vps2.niconicoli.com:8888/68f0041d</a></td>
+<td><a href="http://150.230.192.222:8888/68f0041d">http://150.230.192.222:8888/68f0041d</a></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<h1><a id="github%E9%87%8D%E5%AE%9A%E5%90%91" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>github重定向</h1>
 <h2><a id="centos" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>CentOS</h2>
 <table>
 <thead>
