--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <tbody>
 <tr>
 <td>宝塔面板</td>
-<td><a href="http://vps1.niconicoli.com:8888/36b59849/">http://vps1.niconicoli.com:8888/36b59849/</a></td>
-<td><a href="http://150.230.108.224:8888/36b59849">http://150.230.108.224:8888/36b59849</a></td>
+<td><a href="http://vps1.niconicoli.com:8888/seito/">http://vps1.niconicoli.com:8888/seito/</a></td>
+<td><a href="http://150.230.108.224:8888/seito">http://150.230.108.224:8888/seito</a></td>
 </tr>
 <tr>
 <td>zfile</td>
@@ -23,8 +23,8 @@
 <td><a href="http://150.230.108.224:8080/2/main/root">http://150.230.108.224:8080/2/main/root</a></td>
 </tr>
 <tr>
-<td></td>
-<td></td>
+<td>trojan</td>
+<td><a href="https://vps1.trojan.niconicoli.com/#/dashboard">https://vps1.trojan.niconicoli.com/#/dashboard</a></td>
 <td></td>
 </tr>
 </tbody>
@@ -42,8 +42,13 @@
 <tbody>
 <tr>
 <td>宝塔面板</td>
-<td><a href="http://vps2.niconicoli.com:8888/68f0041d">http://vps2.niconicoli.com:8888/68f0041d</a></td>
-<td><a href="http://150.230.192.222:8888/68f0041d">http://150.230.192.222:8888/68f0041d</a></td>
+<td><a href="http://vps2.niconicoli.com:8888/seito">http://vps2.niconicoli.com:8888/seito</a></td>
+<td><a href="http://150.230.192.222:8888/seito">http://150.230.192.222:8888/seito</a></td>
+</tr>
+<tr>
+<td>宝塔面板-反向代理</td>
+<td><a href="https://bt2.niconicoli.com/seito">https://bt2.niconicoli.com/seito</a></td>
+<td></td>
 </tr>
 <tr>
 <td></td>
